sfdc_pra1/objects/Expensemember__c.object
<CustomObject>
    <fields>
        <fullName>Contrib_amount__c</fullName>
        <label>Contrib_amount</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expensemembers</relationshipLabel>
        <relationshipName>Expensemembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expensemem_email__c</fullName>
        <label>Expensemem_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expensemembers</relationshipLabel>
        <relationshipName>Expensemembers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expensemember</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Expensemember{0000}</displayFormat>
        <label>Expensemember_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expensemembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Expensemember_validation</fullName>
        <active>true</active>
        <description>Contributed amount cannot be greater than total expense</description>
        <errorConditionFormula>Contrib_amount__c   &gt;=   Expense__r.Amount__c</errorConditionFormula>
        <errorMessage>contributed amount is greater than expensed amount</errorMessage>
    </validationRules>
</CustomObject>